# puzzup

./: .env.template  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  LICENSE  Procfile  README.html  README.md  manage.py  pyproject.toml  tasks.py
.github/: dependabot.yml
.github/workflows/: build.yml  enforcer.yml  lint.yml  pytype.yml
puzzle_editing/: admin.py  celery.py  context_processors.py  discord_daemon.py  discord_integration.py  forms.py  git.py  google_integration.py  graph.py  messaging.py  middleware.py  models.py  slashcommands.py  status.py  tests.py  urls.py  utils.py  view_helpers.py  views.py
puzzle_editing/api/: serializers.py  urls.py  viewsets.py
puzzle_editing/data/: LICENSE  adj-eng.txt  nouns-eng.txt
puzzle_editing/discord/: __init__.py  cache.py  channel.py  client.py  perm.py
puzzle_editing/fixtures/: auth.yaml  groups.yaml
puzzle_editing/management/commands/: clean_discord_channels.py  convert_participation_feedback.py  deploy_puzzles.py  discord_daemon.py  export_hints.py  export_metadata.py  find_ambiguous_feedback_comments.py  generate_status_graph.py  import_feedback.py  init_status_mtime.py  postprod_setup.py  remind_feedback.py  setup_git.py
puzzle_editing/migrations/: 0001_initial.py  0002_alter_user_username.py  0002_mh2023_changes.py  0003_alter_puzzle_codename.py  0003_mh2025_drop_deep_emoji.py  0004_alter_user_options_alter_user_managers.py  0004_mk2025_add_puzzle_permissions.py  0005_lint_fixups.py  0005_testsolvesession_admin.py  0006_remove_act.py  0006_testsolvesession_discord_thread_id_and_more.py  0007_fix_puzzle_credit_type_default.py  0007_testsolvesession_admin_thread_id.py  0008_remove_user_display_name.py  0008_user_timezone.py  0009_alter_testsolveparticipation_flavortext_overall.py  0009_discord_only_login.py  0010_non_unique_emails.py  0010_testsolveparticipation_general_feedback_and_more.py  0011_testsolvesession_is_open.py  0011_unique_discord_id.py  0012_alter_testsolveparticipation_general_feedback_and_more.py  0012_remove_discord_avatar.py  0013_add_status_change_permission.py  0013_puzzleanswer_case_sensitive_and_more.py  0014_clean_testsolve_count.py  0014_puzzle_quickcheckers_alter_puzzle_status_and_more.py  0015_simplify_statuses.py  0015_testsolveparticipation_solve_path_and_more.py  0016_alter_testsolveparticipation_solve_path.py  0016_puzzle_content_as_google_docs.py  0017_alter_puzzlecredit_credit_type_and_more.py  0017_logistics_factcheck_external_sources.py  0018_discord_cache.py  0018_remove_testsolvesession_admin_thread_id_and_more.py  0019_alter_puzzle_status_and_more.py  0019_ops_support_requests.py  0020_meta_only_status_subscription.py  0020_puzzle_discussion_editors_alter_puzzle_status_and_more.py  0021_discord_info_message_id.py  (+33 more)
puzzle_editing/static/: sorttable.js
puzzle_editing/static/css/: main.scss  screen.css  screen.css.map
puzzle_editing/static/css/abstracts/: _variables.scss
puzzle_editing/static/css/base/: _base.scss
puzzle_editing/static/css/components/: _answer.scss  _comment.scss  _form.scss  _navbar.scss  _table.scss  _warning.scss
puzzle_editing/static/css/pages/: _byround.scss  _eic_views.scss  _puzzle.scss  _spoiled.scss  _stats.scss  _support.scss  _testsolve.scss
puzzle_editing/static/css/themes/: _dark.scss  _flamewrym.scss  _jellybeans.scss  _neopets.scss  _solarized.scss
puzzle_editing/templates/: 403.html  _editor_list.html  account.html  all.html  all_answers.html  all_hints.html  allrounds.html  authored.html  awaiting_editor.html  awaiting_editor_thin.html  base.html  bulk_add_answers.html  byround.html  bystatus.html  check_metadata.html  docs.html  edit_answer.html  edit_comment.html  edit_hint.html  edit_pseudo_answer.html  edit_round.html  edit_tag.html  editor_overview.html  eic_overview.html  export.html  factcheck.html  flavor.html  gdoc_export.html  index.html  index_not_logged_in.html  mine.html  my_spoiled.html  needs_editor.html  new.html  new_comment_email.html  new_tag.html  postprod.html  postprod_all.html  process.html  process_not_logged_in.html  (+40 more)
puzzle_editing/templates/docs/: admin.html  admin.md  editor.html  editor.md  user.html  user.md  whats_new.html  whats_new.md
puzzle_editing/templates/emails/: awaiting_editor.html  feedback_reminder_email.html  postprod_complete.html  postprod_complete.txt  status_update_email.html  status_update_email.txt  testsolving_stuck.html  testsolving_stuck.txt  testsolving_time.html  testsolving_time.txt
puzzle_editing/templates/process/: getting-started.html  postprod.html  status-glossary.html  testsolving.html  writing.html
puzzle_editing/templates/puzzle_list_presets/: editor_inbox_puzzle_list.html  editor_puzzle_list.html  factcheck_puzzle_list.html  flavor_puzzle_list.html  postprod_puzzle_list.html  user_puzzle_list.html
puzzle_editing/templates/registration/: login.html  logout.html  password_change_done.html  password_change_form.html
puzzle_editing/templates/tags/: answer.html  answer_list.html  comment_list.html  countdown.html  logistics_info.html  puzzle_list.html  testsolve_session_list.html
puzzle_editing/templates/widgets/: answer_checkbox_select_multiple.html  markdown_textarea.html  user_checkbox_select_multiple.html
puzzle_editing/templatetags/: answer_list.py  avatar_list.py  comment_list.py  countdown.py  logistics_info.py  markdown.py  name_list.py  nav_link.py  perm_tags.py  puzzle_list.py  puzzle_search_list.py  testsolve_session_list.py
puzzle_editing/utils/: postprod.py
puzzup/: __init__.py  asgi.py  urls.py
puzzup_2025/: asgi.py  urls.py  wsgi.py
settings/: base.py  dev.py  gunicorn.py  prod.py  sentry.py  staging.py
(+1 files in other folders)
