[tool]
[tool.poetry]
name = "puzzup-2025"
version = "0.0.0"
description = "Puzzle development webapp"
authors = ["betaveros", "mitchgu", "jakob223", "dvorak42", "fortenforge", "Sandy Weisz", "James Sugrono", "teammate", "deathandmayhem"]

[tool.poetry.dependencies]
python = "==3.10.*"
beautifulsoup4 = "==4.10.0"
bleach = "6.0.0"
discord-interactions = "==0.2.0"
dj-database-url = "==0.5.0"
django = ">=4.2,<5.0"
django-debug-toolbar = "3.2.4"
django-filter = "2.4.0"
django-import-export = "==2.7.1"
django-ses = "^3.5.2"
gitpython = "==3.1.7"
google-api-python-client = "==2.37.0"
gunicorn = "==20.0.4"
invoke = "==1.6.0"
ipython = "8.0.1"
markdown = "==3.2.2"
matplotlib = "==3.5.1"
numpy = "==1.22.1"
Pillow = "^9.2.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
pydantic = "==1.9.0"
python-decouple = "==3.5"
python-dotenv = "==0.19.2"
pyyaml = "==6.0"
requests = "==2.25.1"
sentry-sdk = "==1.5.4"
whitenoise = "5.3.0"

[tool.poetry.group.dev.dependencies]
djhtml = "^3.0.6"
pre-commit = "==2.17.0"
pylint = "^3.0.3"
pylint-django = "^2.5.5"
ruff = "^0.1.14"

[tool.ruff]
fix = true
line-length = 88
extend-exclude = ["puzzle_editing/migrations"]
# By default, includes E (pycodestyle error), F (pyflakes)
extend-select = [
    "W",
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "ISC", # flake8-implicit-string-concat
    "EM", # flake8-errmsg
    "PIE",
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PTH",  # flake8-pathlib
    "PL",
    "RUF",
]
ignore = [
    "ISC001",
    "E501",
    "SIM102",
    "PLR091",
    "PLR2004",
    "DJ006",
]
allowed-confusables = ["–"]
