[tool]
[tool.poetry]
name = "puzzup-2025"
version = "0.0.0"
description = "Puzzle development webapp"
authors = ["betaveros", "mitchgu", "jakob223", "dvorak42", "fortenforge", "Sandy Weisz", "James Sugrono", "teammate", "deathandmayhem"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
beautifulsoup4 = "^4.12.3"
bleach = "^6.1.0"
discord-interactions = "^0.4.0"
dj-database-url = "^2.1.0"
django = ">=4.2,<5.0"
django-debug-toolbar = "^4.2.0"
django-import-export = "^3.3.6"
django-ses = "^3.5.2"
gitpython = "^3.1.41"
google-api-python-client = "2.115.0"
gunicorn = "^21.2.0"
invoke = "^2.2.0"
ipython = "^8.20.0"
markdown = "^3.5.2"
matplotlib = "^3.8.2"
numpy = "^1.26.3"
Pillow = "^10.2.0"
psycopg = {extras = ["binary"], version = "^3.1.17"}
pydantic = "==1.9.0"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.1"
requests = "^2.31.0"
sentry-sdk = "^1.39.2"
whitenoise = "^6.6.0"

[tool.poetry.group.dev.dependencies]
djhtml = "^3.0.6"
pre-commit = "^3.6.0"
pylint = "^3.0.3"
pylint-django = "^2.5.5"
ruff = "^0.1.14"

[tool.ruff]
fix = true
line-length = 88
extend-exclude = ["puzzle_editing/migrations"]
# By default, includes E (pycodestyle error), F (pyflakes)
extend-select = [
    "W",
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "ISC", # flake8-implicit-string-concat
    "EM", # flake8-errmsg
    "PIE",
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PTH",  # flake8-pathlib
    "PL",
    "RUF",
]
ignore = [
    "ISC001",
    "E501",
    "SIM102",
    "PLR091",
    "PLR2004",
    "DJ006",
]
allowed-confusables = ["–"]
