[project]
name = "puzzup-2025"
requires-python = ">=3.12"

[tool]
[tool.poetry]
name = "puzzup-2025"
version = "0.0.0"
description = "Puzzle development webapp"
authors = ["betaveros", "mitchgu", "jakob223", "dvorak42", "fortenforge", "Sandy Weisz", "James Sugrono", "teammate", "deathandmayhem"]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
aiogoogle = "^5.7.0"
asgiref = "^3.8.1"
beautifulsoup4 = "^4.12.3"
boto3 = "^1.35.10"
discord-interactions = "^0.4.0"
discord-py = "^2.4.0"
dj-database-url = "^2.2.0"
django = "^5.0.7"
django-debug-toolbar = "^4.4.6"
django-dirtyfields = "^1.9.3"
django-import-export = "^4.1.1"
django-ses = "^4.1.1"
gitpython = "^3.1.43"
gunicorn = {extras = ["gevent"], version = "^23.0.0"}
invoke = "^2.2.0"
ipython = "^8.25.0"
markdown = "^3.6"
matplotlib = "^3.9.2"
nh3 = "^0.2.18"
numpy = "^2.1.0"
Pillow = "^10.4.0"
psycopg = {extras = ["binary"], version = "^3.2.1"}
pymdown-extensions = "^10.9"
python-dotenv = "^1.0.1"
pyyaml = "^6.0.2"
requests = "^2.32.3"
sentry-sdk = "^2.13.0"
supervisor = "^4.2.5"
whitenoise = "^6.7.0"

[tool.poetry.group.dev.dependencies]
daphne = "^4.1.2"
django-stubs = {extras = ["compatible-mypy"], version = "^4.2.7"}
djhtml = "^3.0.6"
mypy = "<1.8.0"
pre-commit = "^3.8.0"
pylint = "^3.2.6"
pylint-django = "^2.5.5"
pylsp-mypy = "^0.6.8"
ruff = "^0.6.3"
types-beautifulsoup4 = "^4.12.0.20240511"
types-boto3 = "^1.0.2"
types-markdown = "^3.7.0.20240822"
types-pillow = "^10.2.0.20240520"
types-requests = "^2.32.0.20240712"

[tool.ruff]
fix = true
line-length = 88
extend-exclude = ["puzzle_editing/migrations"]

[tool.ruff.lint]
# By default, includes E (pycodestyle error), F (pyflakes)
extend-select = [
    "W",
    "I", # isort
    "UP", # pyupgrade
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "DJ", # flake8-django
    "ISC", # flake8-implicit-string-concat
    "EM", # flake8-errmsg
    "PIE",
    "Q", # flake8-quotes
    "SIM", # flake8-simplify
    "PTH",  # flake8-pathlib
    "PL",
    "RUF",
]
ignore = [
    "ISC001",
    "E501",
    "SIM102",
    "PLR091",
    "PLR2004",
    "DJ006",
]
allowed-confusables = ["–"]

[tool.mypy]
plugins = ["mypy_django_plugin.main"]

[tool.django-stubs]
django_settings_module = "settings.prod"
